robot and API refactored
